; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/phy/extr_phy_device.c_phy_set_asym_pause.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/phy/extr_phy_device.c_phy_set_asym_pause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { i64, i32 }

@oldadv = common dso_local global i32 0, align 4
@ETHTOOL_LINK_MODE_Pause_BIT = common dso_local global i32 0, align 4
@ETHTOOL_LINK_MODE_Asym_Pause_BIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @phy_set_asym_pause(%struct.phy_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.phy_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.phy_device* %0, %struct.phy_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @oldadv, align 4
  %8 = call i32 @__ETHTOOL_DECLARE_LINK_MODE_MASK(i32 %7)
  %9 = load i32, i32* @oldadv, align 4
  %10 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %11 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @linkmode_copy(i32 %9, i32 %12)
  %14 = load i32, i32* @ETHTOOL_LINK_MODE_Pause_BIT, align 4
  %15 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %16 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @linkmode_clear_bit(i32 %14, i32 %17)
  %19 = load i32, i32* @ETHTOOL_LINK_MODE_Asym_Pause_BIT, align 4
  %20 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %21 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @linkmode_clear_bit(i32 %19, i32 %22)
  %24 = load i32, i32* %5, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %37

26:                                               ; preds = %3
  %27 = load i32, i32* @ETHTOOL_LINK_MODE_Pause_BIT, align 4
  %28 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %29 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @linkmode_set_bit(i32 %27, i32 %30)
  %32 = load i32, i32* @ETHTOOL_LINK_MODE_Asym_Pause_BIT, align 4
  %33 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %34 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = call i32 @linkmode_set_bit(i32 %32, i32 %35)
  br label %37

37:                                               ; preds = %26, %3
  %38 = load i32, i32* %6, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %46

40:                                               ; preds = %37
  %41 = load i32, i32* @ETHTOOL_LINK_MODE_Asym_Pause_BIT, align 4
  %42 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %43 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 8
  %45 = call i32 @linkmode_change_bit(i32 %41, i32 %44)
  br label %46

46:                                               ; preds = %40, %37
  %47 = load i32, i32* @oldadv, align 4
  %48 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %49 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 8
  %51 = call i32 @linkmode_equal(i32 %47, i32 %50)
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %61, label %53

53:                                               ; preds = %46
  %54 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %55 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %61

58:                                               ; preds = %53
  %59 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %60 = call i32 @phy_start_aneg(%struct.phy_device* %59)
  br label %61

61:                                               ; preds = %58, %53, %46
  ret void
}

declare dso_local i32 @__ETHTOOL_DECLARE_LINK_MODE_MASK(i32) #1

declare dso_local i32 @linkmode_copy(i32, i32) #1

declare dso_local i32 @linkmode_clear_bit(i32, i32) #1

declare dso_local i32 @linkmode_set_bit(i32, i32) #1

declare dso_local i32 @linkmode_change_bit(i32, i32) #1

declare dso_local i32 @linkmode_equal(i32, i32) #1

declare dso_local i32 @phy_start_aneg(%struct.phy_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
